--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@ font-size: 5px;
 
 <body>
     <div id="service">
-        <a href="http://testhtml.dothome.co.kr/Ggonara/회원가입.html"><img src="join.png" style="width:50px; height:30px"></a>
+        <a href="https://jounghoonlee.github.io/G-go-Nara/"><img src="join.png" style="width:50px; height:30px"></a>
 
-<a href="http://testhtml.dothome.co.kr/Ggonara/로그인.html"><img src="login.png" style="width:60px; height:30px"></a>
+<a href="https://ysa5347.github.io/Test_login/Login.html"><img src="login.png" style="width:60px; height:30px"></a>
 
-<a href="http://testhtml.dothome.co.kr/Ggonara/거래내역.html"><img src="mypage.png" style="width:70px; height:30px"></a>
+<a href="https://shimsuyeon.github.io/Ggonara/거래내역.html"><img src="mypage.png" style="width:70px; height:30px"></a>
         </div>
 <div id="logo">
-        <a href="http://testhtml.dothome.co.kr/Ggonara/Ggonara_main.html"><img src="G고나라_로고.png" style="width:90px; height:70px"></a>
+        <a href="https://shimsuyeon.github.io/Ggonara/index.html"><img src="G고나라_로고.png" style="width:90px; height:70px"></a>
 </div>
 <div id="header">
-    <a href="http://testhtml.dothome.co.kr/Ggonara/Ggonara_main.html"><img src="타이틀2.png" style="width:350px; height:130px"></a>
+    <a href="https://shimsuyeon.github.io/Ggonara/index.html"><img src="타이틀2.png" style="width:350px; height:130px"></a>
 </div>
 <div id="search">
     <input type="text" placeholder="검색어 입력">
@@ -102,12 +102,12 @@ font-size: 5px;
 <br>
 <div id="board">
     <h3>board</h3>
-    <iframe src="http://testhtml.dothome.co.kr/Ggonara/게시판.html" style="width:100%; height:500px; border:none"></iframe>
+    <iframe src="https://shimsuyeon.github.io/Ggonara/게시판.html" style="width:100%; height:500px; border:none"></iframe>
 </div>
 
 <div id="review">
     <h3>review</h3>
-    <iframe src="http://testhtml.dothome.co.kr/Ggonara/리뷰.html" style="width:100%; height:500px; border:none"></iframe>
+    <iframe src="https://shimsuyeon.github.io/Ggonara/리뷰.html" style="width:100%; height:500px; border:none"></iframe>
 </div>
 
 <div id="bottom_copyright">
