--- a/index.html
+++ b/index.html
@@ -77,6 +77,53 @@ padding-top:40px;
 color:black;
 font-size: 5px;
 }
+	    ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
+
     </style>
 </head>
 
@@ -97,9 +144,41 @@ font-size: 5px;
 </div>
 <div id="search">
     <input type="text" placeholder="검색어 입력">
-    <button>검색</button>
+    <button type="submit"><img src="돋보기.png" style="width:30px; height:30px"></button>
 </div>
 <br>
+<ul>
+    <li><a class="active" href="https://joun008.github.io/WebPractice/">게시글 작성</a></li>
+    <li><a href="#news">공지사항</a></li>
+    <li class="dropdown">
+      <a href="javascript:void(0)" class="dropbtn" onclick="myFunction()">마이페이지</a>
+      <div class="dropdown-content" id="myDropdown">
+        <a href="#">회원정보</a>
+        <a href="#">거래내역</a>
+        <a href="#">리뷰내역</a>
+        <a href="#">작성내역</a>
+      </div>
+    </li>
+  </ul>
+  <script>
+  function myFunction() {
+      document.getElementById("myDropdown").classList.toggle("show");
+  }
+  
+  window.onclick = function(e) {
+    if (!e.target.matches('.dropbtn')) {
+  
+      var dropdowns = document.getElementsByClassName("dropdown-content");
+      for (var d = 0; d < dropdowns.length; d++) {
+        var openDropdown = dropdowns[d];
+        if (openDropdown.classList.contains('show')) {
+          openDropdown.classList.remove('show');
+        }
+      }
+    }
+  }
+  </script>
+  <br>	
 <div id="board">
     <h3>board</h3>
     <iframe src="https://shimsuyeon.github.io/Ggonara/게시판.html" style="width:100%; height:500px; border:none"></iframe>
