--- a/거래내역.html
+++ b/거래내역.html
@@ -33,7 +33,7 @@
 </style>
 
 <h1>거래 내역...</h1>
-<buttom type="button" class="button" onclick="https://shimsuyeon.github.io/Ggonara/' ">다시 메인으로</buttom>
+<buttom type="button" class="button" onclick="location.href='https://shimsuyeon.github.io/Ggonara/' ">다시 메인으로</buttom>
 </body>
 
 </html>
