--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@ li.dropdown {
 <div id="bottom_copyright">
 <div id="main_copyright">
     <H1> </H1>
-    <br><br>Made by. MOP 2021<br><br><br>
+    <br><br>Made by. MOP 2021<br>
+<br>yonghwan Jo(Board), Minseok Kim(Purchase list), Yeowon Kim(review)<br>
+Suyeon Shim(main), Jinhwan Yoon(Login), Junghwan Lee(Join)
 </div>
 </div>
 </body>
