--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@ li.dropdown {
 <div id="main_copyright">
     <H1> </H1>
     <br><br>Made by. MOP 2021<br>
-<br>yonghwan Jo(Board), Minseok Kim(Purchase list), Yeowon Kim(review)<br>
-Suyeon Shim(main), Jinhwan Yoon(Login), Junghwan Lee(Join)
+<br>Yonghwan Jo(Board), Minseok Kim(Purchase list), Yeowon Kim(review)<br>
+Suyeon Shim(main), Jinhwan Yoon(Login), Junghwan Lee(Join)<br>
 </div>
 </div>
 </body>
