--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ li.dropdown {
 <br>
 <ul>
     <li><a class="active" href="https://joun008.github.io/WebPractice/">게시글 작성</a></li>
-    <li><a href="#news">공지사항</a></li>
+    <li><a href="#notice">공지사항</a></li>
     <li class="dropdown">
       <a href="javascript:void(0)" class="dropbtn" onclick="myFunction()">마이페이지</a>
       <div class="dropdown-content" id="myDropdown">
@@ -159,6 +159,8 @@ li.dropdown {
         <a href="#">작성내역</a>
       </div>
     </li>
+    <li><a href="#board">판매목록</a></li>
+    <li><a href="#review">리뷰목록</a></li>
   </ul>
   <script>
   function myFunction() {
