--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ li.dropdown {
 <div id="main_copyright">
     <H1> </H1>
 <br>---<br>
-    <br><br>Made by. MOP 2021<br>
+    <br><br>Made by. GIST MOP 2021<br>
 <br>Yonghwan Jo(Board), Minseok Kim(Purchase list), Yeowon Kim(review)<br>
 Suyeon Shim(main), Jinhwan Yoon(Login), Junghwan Lee(Join)<br>
 </div>
