--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ li.dropdown {
     </li>
     <li><a href="#board">판매목록</a></li>
     <li><a href="#review">리뷰목록</a></li>
-    <li><a href="#review">About us</a></li>
+    <li><a href="#about_us">About us</a></li>
   </ul>
   <script>
   function myFunction() {
