--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@ li.dropdown {
   </script>
   <br>	
 <div id="board">
-    <h3>board</h3>
+    <h3 text-align:center>BOARD</h3>
     <iframe src="https://shimsuyeon.github.io/Ggonara/게시판.html" style="width:100%; height:500px; border:none"></iframe>
 </div>
 
 <div id="review">
-    <h3>review</h3>
+    <h3 text-align:center>REVIEW</h3>
     <iframe src="https://shimsuyeon.github.io/Ggonara/리뷰.html" style="width:100%; height:500px; border:none"></iframe>
 </div>
 
