--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ li.dropdown {
 
 <a href="https://ysa5347.github.io/Test_login/Login.html"><img src="login.png" style="width:60px; height:30px"></a>
 
-<a href="https://shimsuyeon.github.io/Ggonara/거래내역.html"><img src="mypage.png" style="width:70px; height:30px"></a>
+<a href="https://tony5044.github.io/kimminseok/"><img src="mypage.png" style="width:70px; height:30px"></a>
         </div>
 <div id="logo">
         <a href="https://shimsuyeon.github.io/Ggonara/index.html"><img src="G고나라_로고.png" style="width:90px; height:70px"></a>
@@ -154,7 +154,7 @@ li.dropdown {
       <a href="javascript:void(0)" class="dropbtn" onclick="myFunction()">마이페이지</a>
       <div class="dropdown-content" id="myDropdown">
         <a href="#">회원정보</a>
-        <a href="#">거래내역</a>
+        <a href="https://tony5044.github.io/kimminseok/">거래내역</a>
         <a href="#">리뷰내역</a>
         <a href="#">작성내역</a>
       </div>
