--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@ li.dropdown {
   <br>	
 <div id="board">
     <h3 text-align:center>BOARD</h3>
-    <iframe src="https://shimsuyeon.github.io/Ggonara/게시판.html" style="width:100%; height:500px; border:none"></iframe>
+    <iframe src="https://melgo01.github.io/develop_study/G%EA%B3%A0%EB%82%98%EB%9D%BC%EB%A6%AC%EB%B7%B0%ED%8E%98%EC%9D%B4%EC%A7%80.html" style="width:100%; height:500px; border:none"></iframe>
 </div>
 
 <div id="review">
     <h3 text-align:center>REVIEW</h3>
-    <iframe src="https://melgo01.github.io/develop_study/G%EA%B3%A0%EB%82%98%EB%9D%BC%EB%A6%AC%EB%B7%B0%ED%8E%98%EC%9D%B4%EC%A7%80.html" style="width:100%; height:500px; border:none"></iframe>
+    <iframe src="https://shimsuyeon.github.io/Ggonara/리뷰내역.html" style="width:100%; height:500px; border:none"></iframe>
 </div>
 
 <div id="bottom_copyright">
