--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     width:50%;
     height: 600px;
     float:left;
-    background-color: gray;
+    background-color: lightgray;
 }
 #review{
     width:50%;
     height:600px;
     float:right;
-    background-color: lightgray;
+    background-color: gray;
 }
 #blank{
     width:20px;
@@ -189,7 +189,7 @@ li.dropdown {
 
 <div id="review">
     <h3 text-align:center>REVIEW</h3>
-    <iframe src="https://shimsuyeon.github.io/Ggonara/리뷰내역.html" style="width:100%; height:500px; border:none"></iframe>
+    <iframe src="https://shimsuyeon.github.io/Ggonara/리뷰.html" style="width:100%; height:500px; border:none"></iframe>
 </div>
 
 <div id="bottom_copyright">
