--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ li.dropdown {
         <a href="#">작성내역</a>
       </div>
     </li>
-    <li><a href="#board">판매목록</a></li>
+    <li><a href="https://shimsuyeon.github.io/Ggonara/게시판.html">판매목록</a></li>
     <li><a href="https://melgo01.github.io/develop_study/G%EA%B3%A0%EB%82%98%EB%9D%BC%EB%A6%AC%EB%B7%B0%ED%8E%98%EC%9D%B4%EC%A7%80.html">리뷰목록</a></li>
     <li><a href="#about_us">About us</a></li>
   </ul>
