--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@ li.dropdown {
     <H1> </H1>
 <br>---<br>
     <br><br>Made by. GIST MOP 2021<br>
-<br>Yonghwan Jo(Board), Minseok Kim(Purchase list), Yeowon Kim(review)<br>
-Suyeon Shim(main), Jinhwan Yoon(Login), Junghwan Lee(Join)<br>
+<br>Yonghwan Jo(Board), Minseok Kim(Purchase list), Yeowon Kim(Review)<br>
+Suyeon Shim(Main), Jinhwan Yoon(Login), Junghwan Lee(Join)<br>
 <br>(우)61005 광주광역시 북구 첨단과기로 123(오룡동)<br>
 </div>
 </div>
